# Kona-Os

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts  types.ts
dashboard/src/: App.vue  KernelCard.vue  ProcessInput.vue  types.ts
kona/: __init__.py  cli.py  engine.py  models.py
kona/agents/: __init__.py  kernel_agent.py  signal_agent.py
kona/analyzers/: __init__.py  clarity_analyzer.py  memory_analyzer.py  routing_analyzer.py
kona/utils/: __init__.py  cache.py  logger.py  rate_limiter.py
tests/: conftest.py  test_agents.py  test_analyzers.py  test_engine.py  test_helpers.py  test_models.py
